--- a/html/css/Index.css
+++ b/html/css/Index.css
@@ -1,7 +1,133 @@
 @charset "UTF-8";
 
+:root {
+    --card-img-shadow: rgba(128, 128, 128, .5)
+}
+
+@font-face {
+    font-family: Angst;
+    src: url("/html/source/font/Angst-Thin.otf");
+}
+
 body {
     #main {
         padding: 10px 10%;
+
+        .pointer {
+            margin-bottom: 2rem;
+        }
+    
+        .new-in-wrapper {
+    
+            .sort-direction {
+                .sort-text {
+                    font-weight: 500;
+                }
+                .icon-wrapper {
+                    margin: .5rem 0 0 1rem;
+                }
+            }
+    
+            .cards-wrapper {
+                margin-bottom: 4rem;
+                .card {
+                    width: 20%;
+                    padding: 1rem;
+                    border: 0;
+                    
+                    .favourite {
+                        position: absolute;
+                        padding: 1rem;
+                        top: 1rem;
+                        right: 1rem;
+                        z-index: 1;
+                        border: 0;
+                        background-color: transparent;
+                    }
+
+                    .favourite:hover {
+                        scale: 1.1;
+                        cursor: pointer;
+                    }
+
+                    a {
+                        color: black;
+                        text-decoration: none;
+
+                        .card-body {
+                            border: 1px solid rgba(0, 0, 0, .125);
+                            border-radius: .5rem;
+                            margin-bottom: 1rem;
+                            padding-top: 2rem;
+                            aspect-ratio: 2 / 3;
+                            box-shadow: .35rem .35rem 1.5rem var(--card-img-shadow);
+                        }
+                        
+                        .card-text {
+                            padding: .25rem;
+                        
+                            .season {
+                                
+                            }
+                            
+                            .brand {
+                                font-weight: 600;
+                            }
+                            
+                            .description {
+                                line-height: 1rem;
+                                height: 4rem;
+                            }
+                        }
+                    }
+                }
+                
+                .card:hover {
+                    scale: 1.001;
+                }
+            }
+        }
+
+        .presentation-wrapper {
+            .presentation {
+                width: 50%;
+
+                .header {
+                    font-family: Angst;
+                    margin-bottom: 3rem;
+                }
+
+                .text {
+                    margin-bottom: 2rem;
+
+                    p {
+                        /* text-justify: center; */
+                        text-align: center;
+                        width: 80%;
+                    }
+                }
+
+                .link-button {
+                    a {
+                        button {
+                            padding: .5rem 1.25rem;
+                            border-radius: .5rem;
+                            background-color: transparent;
+                        }
+                    }
+
+                    a:hover {
+                        scale: 1.025;
+                    }
+                }
+            }
+
+            .img-wrapper {
+                width: 30%;
+                img {
+                    width: 100%;
+                }
+            }
+        }
     }
 }
