--- a/html/css/Index.css
+++ b/html/css/Index.css
@@ -42,7 +42,7 @@ body {
             margin-bottom: 4rem;
             .card {
                 width: 20%;
-                padding: 1rem;
+                /* padding: 1rem; */
                 border: 0;
                 
                 .favourite {
@@ -145,6 +145,10 @@ body {
             }
         }
 
+        h3 {
+            margin: 4rem 0  ;
+        }
+
         .accessories-presentation-wrapper {
             margin: 2rem 0;
 
@@ -166,18 +170,22 @@ body {
             .topic-card {
                 margin: 2rem;
                 width: 20%;
+                aspect-ratio: 2 / 3;
 
                 a {
                     text-decoration: none;
+                    /* height: 100%; */
 
                     img {
                         width: 100%;
+                        height: 100%;
                         border-radius: 2rem;
                         box-shadow: 0rem .35rem 1.5rem var(--card-img-shadow);
-                        margin-bottom: 2rem;
+                        object-fit: cover;
                     }
                     
                     p {
+                        padding-top: 3rem;
                         font-size: 18px;
                         text-transform: uppercase;
                         color: black;
@@ -187,6 +195,34 @@ body {
 
             .topic-card:hover {
                 scale: 1.005;
+            }
+        }
+
+        .question-topics-wrapper {
+            a {
+                text-decoration: none;
+                color: black;
+                width: 30%;
+
+                .topic {
+                    padding: 1rem;
+                    outline: rgba(128, 128, 128, 0.5) solid 1px;
+                    border-radius: .25rem;
+                    
+                    .icon {
+                        margin-bottom: .75rem;
+                    }
+                    
+                    .text {
+                        .topic-header {
+                            text-transform: uppercase;
+                        }
+                    }
+                }
+            }
+
+            a:hover {
+                scale: 1.01;
             }
         }
     }
