--- a/html/css/Index.css
+++ b/html/css/Index.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 :root {
-    --card-img-shadow: rgba(128, 128, 128, .5)
+    --card-img-shadow: rgba(128, 128, 128, .5);
 }
 
 @font-face {
@@ -71,6 +71,7 @@ body {
                         padding: 2rem 1rem;
                         aspect-ratio: 2 / 3;
                         box-shadow: .35rem .35rem 1.5rem var(--card-img-shadow);
+                        justify-content: center;
                         
                         img {
                             max-height: 100%;
@@ -180,7 +181,7 @@ body {
                         width: 100%;
                         height: 100%;
                         border-radius: 2rem;
-                        box-shadow: 0rem .35rem 1.5rem var(--card-img-shadow);
+                        box-shadow: .35rem .35rem 1.5rem var(--card-img-shadow);
                         object-fit: cover;
                     }
                     
@@ -206,7 +207,7 @@ body {
 
                 .topic {
                     padding: 1rem;
-                    outline: rgba(128, 128, 128, 0.5) solid 1px;
+                    outline: var(--card-img-shadow) solid 1px;
                     border-radius: .25rem;
                     
                     .icon {
@@ -223,6 +224,69 @@ body {
 
             a:hover {
                 scale: 1.01;
+            }
+        }
+
+        .subscribe-wrapper {
+            font-size: 12px;
+            padding: 2rem;
+            
+            .header-wrapper {
+                width: 40%;
+                padding: 1rem;
+            }
+
+            .subscribe-form {
+                width: 40%;
+                padding: 1rem;
+
+                .header {
+                    font-size: 16px;
+                    text-transform: uppercase;
+                }
+                
+                .body {
+                    margin: 0.5rem;
+                }
+
+                button {
+                    width: 6vw;
+                    padding: .75rem;
+                    margin: 1rem 0;
+                    border: 0;
+                    border-radius: .5rem;
+                    background-color: black;
+                    color: white;
+                }
+
+                .checkbox-wrapper {
+                    p {
+                        margin: 1rem;
+                        font-size: 1rem;
+                        font-weight: 500;
+                        align-content: center;
+                    }
+                }
+
+                a {
+                    color: inherit;
+                }
+            }
+
+            input[type="text"], input[type="tel"] {
+                width: 18vw;
+                height: 2rem;
+                padding: 1.25rem;
+                font-size: 1rem;
+                border: 2px solid var(--card-img-shadow);
+                border-radius: .5rem;
+            }
+
+            input[type="checkbox"] {
+                width: 2rem;
+                height: 2rem;
+                margin: 1rem 0;
+                border: 2px solid black;
             }
         }
     }
