--- a/html/css/_header.css
+++ b/html/css/_header.css
@@ -1,5 +1,9 @@
 @charset "UTF-8";
 
+:root {
+    --light-grey: rgba(180, 180, 180, .8);
+}
+
 @font-face {
     font-family: GardensC;
     src: url("/html/source/font/GardensC_03_1.otf");
@@ -90,7 +94,7 @@ header {
             li {
                 list-style-type: none;
                 padding: 5px;
-                text-transform: uppercase;
+                /* text-transform: uppercase; */
                 font-size: 14px;
                 font-weight: 600;
                 
@@ -98,7 +102,7 @@ header {
                     border: 0;
                     background-color: transparent;
                     font-weight: 600;
-                    text-transform: uppercase;
+                    /* text-transform: uppercase; */
                 }
 
                 button:hover {
@@ -140,6 +144,11 @@ header {
 
                 a:hover {
                     color: rgba(80, 80, 80, 0.5);
+                }
+
+                button {
+                    border: 0;
+                    background-color: transparent;
                 }
             }
             
@@ -225,5 +234,106 @@ header {
     p {
         color: grey;
         margin: 0;
+    }
+}
+
+#sign-in {
+    .modal-dialog {
+        width: 350px;
+
+        .modal-content {
+            .modal-header {
+
+            }
+
+            .modal-body {
+                padding: 3rem;
+
+                .modal-title {
+                    font-size: 18px;
+                    margin-bottom: 1rem;
+                }
+
+                .btns-wrapper {
+                    margin: 1rem 0;
+
+                    button {
+                        border: 0;
+                        border-bottom: 2px solid var(--light-grey);
+                        background-color: transparent;
+                        text-transform: uppercase;
+                        color: var(--light-grey);
+                        
+                        &.selected, &:hover {
+                            border-color: black;
+                            color: black;
+                        }
+                    }
+                }
+
+                form {
+                    font-size: .75rem;
+
+                    label {
+                        margin: .25rem 0;
+                        color: grey;
+                    }
+
+                    input {
+                        height: 2vw;
+                        border: 2px solid var(--light-grey);
+                        border-radius: .5rem;
+                        margin-bottom: .5rem;
+                    }
+
+                    button {
+                        height: 2vw;
+                        margin-top: 2rem;
+                        border: 2px solid black;
+                        border-radius: .5rem;
+                        background-color: black;
+                        color: white;
+                        text-transform: uppercase;
+                    }
+                }
+
+                .sign-in-separator {
+                    p {
+                        margin: 0;
+                        margin-top: .2rem;
+                        text-align: center;
+                    }
+                }
+
+                .oauth-btns {
+                    position: relative;
+
+                    .oauth-btn {
+                        margin: .5rem 0;
+
+                        button {
+                            width: 100%;
+                            height: 2vw;
+                            padding-left: 4rem;
+                            border: 2px solid black;
+                            border-radius: .5rem;
+                            background-color: transparent;
+                            color: black;
+                            text-align: start;
+                            font-size: 14px;
+                            font-weight: 600;
+                        }
+    
+                        img {
+                            position: absolute;
+                            width: 24px;
+                            height: 24px;
+                            margin: .45rem .5rem .5rem 1rem;
+                        }
+                    }
+
+                }
+            }
+        }
     }
 }
