--- a/html/css/_header.css
+++ b/html/css/_header.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import url('/html/css/utilities.css');
+@import url('/html/css/_utilities.css');
 
 :root {
     --light-grey: rgba(180, 180, 180, .8);
@@ -14,7 +14,6 @@
     font-family: MV-Skifer;
     src: url("/html/source/font/MV-SKIFER.otf");
     font-weight: 600;
-    font-style: bold;
 }
 
 header {
@@ -124,12 +123,34 @@ header {
 
         .icons-search-wrapper {
             margin: 0px 0px 0px 20px;
+            width: 20%;
 
             .icons-wrapper {
+                margin-bottom: 1rem;
               
-                div {
+                .person-wrapper {
+                    margin: 0;
+                    padding: 0;
+
+                    .text-info {
+                        .text {
+                            padding: 0;
+                            margin: 0 5px;
+                            font-weight: 600;
+                        }
+
+                        .user-name {
+                            color: black;
+                        }
+                        
+                        .user-rank {
+                            color: red;
+                        }
+                    }
+                }
+
+                .icon {
                     margin: 5px;
-                    margin-bottom: 20px;
                 }
 
                 a {
@@ -146,32 +167,34 @@ header {
                 }
             }
             
-            .search-wrapper {
-                position: relative;
-                
-                input {
-                    margin-left: 5px;
-                    outline-width: 2px;
-                    outline-color: rgba(80, 80, 80, 0.3);
-                    border: 2px solid;
-                    border-color: rgba(80, 80, 80, 0.3);
-                    border-radius: 10px;
-                    padding: 10px 40px;
-                }
-                
-                input:focus-visible {
-                    outline-width: 2px;
-                    outline-color: rgba(80, 80, 80, 0.5);
-                    border: 2px solid;
-                    border-color: rgba(80, 80, 80, 0.5);
-                }
-                
-                .search-icon {
-                    position: absolute;
-                    margin: 10px 20px;
-                }
-            }
         }
+    }
+}
+
+.search-wrapper {
+    position: relative;
+    
+    input {
+        margin-left: 5px;
+        outline-width: 2px;
+        outline-color: rgba(80, 80, 80, 0.3);
+        border: 2px solid;
+        border-color: rgba(80, 80, 80, 0.3);
+        border-radius: 10px;
+        padding: 10px 40px;
+        width: 100%;
+    }
+    
+    input:focus-visible {
+        outline-width: 2px;
+        outline-color: rgba(80, 80, 80, 0.5);
+        border: 2px solid;
+        border-color: rgba(80, 80, 80, 0.5);
+    }
+    
+    .search-icon {
+        position: absolute;
+        margin: 10px 20px;
     }
 }
 
