--- a/html/css/Cart.css
+++ b/html/css/Cart.css
@@ -3,17 +3,28 @@
 .cart-sum-wrapper {
 
     .cart-list-wrapper {
+        margin-right: 4vw;
+
         .list-header {
-            margin-right: 2rem;
+            /* margin-right: 2rem; */
             h2, h3 {
                 text-transform: uppercase;
                 font-weight: 600;
                 margin-bottom: 1vw;
             }
+
+            .duties-notice {
+                padding-right: 1vw;
+                svg {
+                    width: 25px;
+                    height: 25px;
+                    margin-left: 1rem;
+                }
+            }
         }
     
         .list-wrapper {
-            .list-item {
+            .cart-item {
                 padding: 1vw;
                 
                 img {
@@ -53,18 +64,27 @@
                     }
     
                     .size-quanity-wrapper {
-                        :nth-child(n+1 of div + .header, .value)
-                        
-                        .size {
-    
-                        }
-    
-                        .quanity {
-    
+                        :nth-child(n+1 of div) {
+                            margin-bottom: 1rem;
+
+                            .value {
+                                font-weight: 600;
+                                margin-left: .5rem;
+
+                                a {
+                                    margin-left: .5rem;
+                                    color: grey;
+                                    font-weight: 300;
+                                }
+                            }
                         }
     
                         .added-to-favourite {
-    
+                            margin-top: 2rem;
+
+                            .favourite {
+                                margin-right: 1rem;
+                            }
                         }
                     }
                 }
@@ -81,8 +101,59 @@
         a {
             color: black;
         }
-    
+        
+        .purch-sum {
+            margin-top: 2rem;
+
+            .summary {
+                font-weight: 600;
+            }
+        }
     }
+}
+
+.question-topics-wrapper {
+    margin: 3rem 0;
+        
+    .topic {
+        width: 30%;
+        transition: all .3s ease-in;
+        padding: 1rem;
+        outline: var(--card-img-shadow) solid 1px;
+        border-radius: .25rem;
+        height: 200px;
+        
+        .icon {
+            height: 40px;
+            display: flex;
+            justify-content: center;
+            margin-bottom: .75rem;
+            svg {
+                overflow: visible;
+            }
+        }
+        
+        .text {
+            :nth-child(n+1 of p) {
+                display: flex;
+                justify-content: center;
+                text-align: center;
+            }
+            
+            .topic-header {
+                text-transform: uppercase;
+                font-weight: 600;
+            }
+        }
+        
+        &:hover {
+            background-color: rgba(240, 240, 240, 0.5);
+            color: black;
+            box-shadow: 0 0 .5rem grey inset;
+            transition: all .3s ease-in;
+        }
+    }
+
 }
 
 .favourite-list {
