--- a/html/css/_utilities.css
+++ b/html/css/_utilities.css
@@ -83,42 +83,7 @@
                 padding: 1rem;
                 top: 0rem;
                 right: 0rem;
-                z-index: 1;
-                border: 0;
-                background-color: transparent;
-                
-                label {
-                    cursor: pointer;
-                    transition: 1s ease;
-                    
-                    svg {
-                        width: 20px;
-                        height: 20px;
-                        margin-top: 5px;
-                        color: white;
-                        stroke: black;
-                        overflow: visible;
-                    }
-        
-                    &:hover {
-                        scale: 1.1;
-                        transition: 1s ease;
-                        font-weight: 600;
-                    }
-                }
-            
-                input[type="checkbox"] {
-                    display: none;
-                }
-        
-                input[type="checkbox"]:checked + label {
-                    font-weight: 600;
-        
-                    svg {
-                        stroke: none;
-                        color: rgb(224, 36,94);
-                    }
-                } 
+                z-index: 1; 
             }
     
             a {
@@ -233,6 +198,44 @@
             }
         }
     }
+}
+
+.favourite {
+    border: 0;
+    background-color: transparent;
+    
+    label {
+        cursor: pointer;
+        transition: 1s ease;
+        
+        svg {
+            width: 20px;
+            height: 20px;
+            margin: 4px 2px 0px 2px;
+            color: white;
+            stroke: black;
+            overflow: visible;
+        }
+
+        &:hover {
+            scale: 1.1;
+            transition: 1s ease;
+            font-weight: 600;
+        }
+    }
+
+    input[type="checkbox"] {
+        display: none;
+    }
+
+    input[type="checkbox"]:checked + label {
+        font-weight: 600;
+
+        svg {
+            stroke: none;
+            color: rgb(224, 36,94);
+        }
+    } 
 }
 
 .filter-btns {
