--- a/html/css/product.css
+++ b/html/css/product.css
@@ -1,10 +1,5 @@
 @charset "UTF-8";
-
-@font-face {
-    font-family: Inter;
-    src: url("/www/source/font/Inter-VariableFont_opsz\,wght.ttf");
-    font-weight: 300;
-}
+@import url("./_utilities.css");
 
 #main {
     font-family: Inter;
